kubernetes/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: staging-fplugin
  labels: {app: staging-fplugin}
spec:
  template:
    metadata: {labels: {app: staging-fplugin}}
    spec:
      containers:
      - name: staging-fplugin
        image: gcr.io/fantasy-218701/github.com/owenmonagan/staging-fplugin:${TAG}
        ports:
        - containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /alive
            port: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
