kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: fplugin
  namespace: default
spec:
  selector:
    app: fplugin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
